--- a/code.html
+++ b/code.html
@@ -4,21 +4,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-ABdnjefqVzESm+f9z9hcqx2cvwvDNjfrwfW5Le9138qHCMGlNmWawyn/tt4jR4ba" crossorigin="anonymous">
   <link rel="stylesheet" href="website_style.css">
-  <title>Adam DePollo | Java Developer, Writer, Musician</title>
+  <title>Adam DePollo | Software</title>
 </head>
 
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand navy" href="index.html">adam depollo</a>
+    <a class="navbar-brand navy" href="index.html">ADAM DePOLLO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">code<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">software<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="index.html">home</a>
@@ -41,7 +41,7 @@
     <div class="m-3"></div>
     <div class="row">
       <div class="col-lg-12">
-        <h3 class="firstPageHeader">code</h3>
+        <h1>SOFTWARE</h1>
         <p class="firstPageP">My first coding experience came from adding HTML tags and embedding videos into the articles I wrote at my college newspaper. After spending a few years working as a writer and website manager, however, I realized not
           only just how much getting my work done depended on having good software at my disposal, but also how little I really knew about the systems I was working with every day. In 2019, I decided to change that and enrolled in a Java Bootcamp at
           Grand Circus in Detroit. There, I added the following languages and skills to my repertoire: </p>
@@ -75,9 +75,8 @@
     </div>
     <div class="row">
       <div class="col-lg-12">
-
         <p class="firstPageP">You'll find info on some of the programs I've made below, but you can find even more of my work on <a href="https://github.com/adamdepollo">my GitHub page</a>.
-          <hr />
+          <hr>
         </p>
       </div>
     </div>
@@ -87,10 +86,10 @@
         <ul class="list-unstyled">
           <li class="media">
             <div class="media-body firstPageP">
-              <h3 class="mt-0 mb-1 firstPageHeader">minefield</h3>
+              <h3 class="mt-0 mb-1 firstPageHeader">Minefield</h3>
               This Minesweeper port was a lot of fun to make. Working with a partner, I first made a version of the game that used a .txt file to store and display the minefield and took user input for which square to uncover using a basic Java
               compiler console. Once we had the basic logic down, I spent the weekend researching JSwing and created the GUI you can see in the accompanying GIF. It includes a soundtrack of music I recorded at my home studio and explosion sounds for
-              when the player loses.<small><em><a href ="https://github.com/philliptaylormcgrath/Minefield-App" class="d-print-none d-md-block">See the code ...</a></em></small>
+              when the player loses.<small><em><a href="https://github.com/philliptaylormcgrath/Minefield-App" class="d-print-none d-md-block">See the code ...</a></em></small>
             </div>
           </li>
         </ul>
@@ -106,9 +105,10 @@
         <ul class="list-unstyled">
           <li class="media">
             <div class="media-body firstPageP">
-              <h3 class="mt-0 mb-1 firstPageHeader">task-list</h3>
+              <h3 class="mt-0 mb-1 firstPageHeader">TaskList</h3>
               I made this task manager web app using SpringMVC and Hibernate. User accounts and their respective task lists are all stored in a MySQL database, which updates automatically as the user makes changes to their tasks on the web page. The
-              app includes password authentication, logic to prevent users from creating an account using an email that has already been registered, task sorting by due date and completeness, and search functionality.<small><em><a href ="https://github.com/adamdepollo/Week6Capstone" class="d-print-none d-md-block">See the code ...</a></em></small>
+              app includes password authentication, logic to prevent users from creating an account using an email that has already been registered, task sorting by due date and completeness, and search functionality.<small><em><a
+                    href="https://github.com/adamdepollo/Week6Capstone" class="d-print-none d-md-block">See the code ...</a></em></small>
             </div>
           </li>
         </ul>
@@ -124,7 +124,6 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAguxHIAXzZXks7OZEjpVNEzA3mJOLz7o&callback=initMap" type="text/javascript"></script>
   <script>
     $("#navMenu").resize(function() {
       $('#godown').height($("#navMenu").height() + 10);
