--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-ABdnjefqVzESm+f9z9hcqx2cvwvDNjfrwfW5Le9138qHCMGlNmWawyn/tt4jR4ba" crossorigin="anonymous">
   <link rel="stylesheet" href="website_style.css">
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" data-format="inline" data-width="600" async defer></script>
-  <title>Adam DePollo | Java Developer, Writer, Musician</title>
+  <title>Adam DePollo | Contact</title>
 </head>
 
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand navy" href="index.html">adam depollo</a>
+    <a class="navbar-brand navy" href="index.html">ADAM DePOLLO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -47,7 +45,7 @@
       <div col="lg-12">
 
         <!--Section heading-->
-        <h2 class="h1-responsive font-weight-bold text-center my-4 firstPageP">get in touch</h2>
+        <h2 class="h1-responsive font-weight-bold text-center my-4 firstPageP">Get in touch ...</h2>
         <!--Section description-->
         <p class="text-center w-responsive mx-auto mb-5 firstPageP">Say hello. Let's work together.</p>
       </div>
@@ -117,32 +115,12 @@
         <div class="status"></div>
       </div>
     </div>
-
-<div class="m-3"></div>
-    <div class="row justify-content-center">
-      <div class="col-lg-12">
-        <ul class="list-unstyled mb-0 text-center">
-          <li><i class="fas fa-map-marker-alt fa-2x"></i>
-            <p class="firstPageP">Metro Detroit, MI USA</p>
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.293669595341!2d-83.05252879973588!3d42.33626187908639!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883b2d33d89a51e1%3A0xa9790542da332066!2sGrand%20Circus%20Detroit!5e0!3m2!1sen!2sus!4v1573186947780!5m2!1sen!2sus"
-              max-width="100%" max-height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-          </li>
-<div class="m-3"></div>
-          <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-            <p class="firstPageP">adamdepollo@gmail.com</p>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
   </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAguxHIAXzZXks7OZEjpVNEzA3mJOLz7o&callback=initMap" type="text/javascript"></script>
 
 </body>
 
