--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-ABdnjefqVzESm+f9z9hcqx2cvwvDNjfrwfW5Le9138qHCMGlNmWawyn/tt4jR4ba" crossorigin="anonymous">
   <link rel="stylesheet" href="website_style.css">
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" data-format="inline" data-width="600" async defer></script>
   <title>Adam DePollo | Java Developer, Writer, Musician</title>
 </head>
 
-<body>
+<body id="indexBody">
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand navy" href="index.html">adam depollo</a>
+    <a class="navbar-brand navy" href="index.html">ADAM DEPOLLO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -40,22 +41,27 @@
   <div class="container">
     <div class="m-3"></div>
     <div class="row">
-
-      <div class="col-lg-8">
-        <div class="m-3"></div>
-        <h3 class="firstPageHeader">about me</h3>
-        <a href="https://www.linkedin.com/adamdepollo" class="badge badge-primary" id="linkedin">LinkedIn</a>
-        <a href="https://github.com/adamdepollo" class="badge badge-secondary">GitHub</a>
-        <div class="m-3"></div>
-        <p class="lead firstPageP">I’m a back-end software developer with a background in writing, editing, and music.</p>
-        <p class="firstPageP">In my previous work writing in corporate, news, and small business settings, I learned first-hand that even small improvements in website design can make a huge difference in productivity and user experience. That’s why
-          I decided to study Java at Grand Circus — I wanted to combine my communication skills with the ability to design software to make communication easier and more effective. I’m looking forward to finding a role at the intersection of tech and
-          the humanities where I can make the most of the skills at my disposal.</p>
-        <p class="firstPageP">Outside of business hours, I keep busy as a freelance arts writer — currently with the Michigan Quarterly Review — and as a producer and multi-instrumentalist playing with several artists in the Detroit area. </p>
+      <div class="col-lg-6">
+        <br><br><br><br>
+        <div style="color: rgb(45, 50, 40); background-color: linear-gradient(to right, rgba(225, 220, 205, 1.0), rgba(225, 220, 205, 0.3)); height: 50%;">
+          <div class="text-center" style="max-width: 75%;">
+          <h1 style="font-size: 40pt;">Adam DePollo</h1>
+          <h6 style="font-size: 18pt;">Software Developer | Writer | Musician</h6>
+          <!--<div class="row">
+            <div class="col-sm-2"> <a href="https://www.linkedin.com/adamdepollo" class="badge badge-primary" id="linkedin" style="border: solid .5pt; color: rgb(225, 220, 205);">LinkedIn</a></div>
+            <div class="col-sm-2"> <a href="https://github.com/adamdepollo" class="badge badge-secondary" style="border: solid .5pt; color: rgb(225, 220, 205);">GitHub</a>
+            </div>
+          </div> -->
+        </div>
+        </div>
       </div>
-      <div class="col-md-4">
-        <div class="m-3"></div>
-        <img src="IMG_3567.jpeg" class="img-fluid" alt="Responsive image">
+      <div class="col-sm-2">
+      </div>
+      <div class="col-sm-4 card card-body" style="background-color: rgba(150, 120, 91, 0.75); border: solid 2pt; color: rgb(225, 220, 205);">
+        <p class="firstPageP" style="float: center;">After working for several years writing web and print content for corporations, newspapers, and small businesses, I learned that even small improvements in website design can make a huge difference in
+          productivity and user experience. That realization pushed me to pursue a certificate in Java and back-end software development at Grand Circus in Detroit, MI — I wanted to combine my communication skills with the ability to design software
+          to make communication easier and more effective. Now I'm working full-time as a software developer in the Metro Detroit area, and I'm always looking to pick up new freelance projects.</p>
+        <p class="firstPageP">Outside of business hours, I keep busy as a freelance arts writer — currently with the Michigan Quarterly Review — and as a producer and multi-instrumentalist playing with several artists in the Detroit area. </p>
       </div>
     </div>
   </div>
