--- a/music.html
+++ b/music.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-ABdnjefqVzESm+f9z9hcqx2cvwvDNjfrwfW5Le9138qHCMGlNmWawyn/tt4jR4ba" crossorigin="anonymous">
   <link rel="stylesheet" href="website_style.css">
-  <title>adam depollo | writing</title>
+  <title>Adam DePollo | Music</title>
 </head>
 
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand navy" href="index.html">adam depollo</a>
+    <a class="navbar-brand navy" href="index.html">ADAM DePOLLO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -42,7 +42,7 @@
     <div class="m-3"></div>
     <div class="row">
       <div class="col-lg-12">
-        <h3 class="firstPageHeader">music</h3>
+        <h1 class="firstPageHeader">MUSIC</h1>
         <p class="firstPageP">I've been a musician almost my entire life, and I still try to get as many opportunities to play and write as I can. I started studying piano and violin when I was about 8 years old, but I got my first guitar when I was
           12 and fell in love with it right away. Since then, the guitar has been my primary instrument (with an honorable mention to the electric bass). My go-tos these days are a 1999 MIM Fender Stratocaster and a 1996 Taylor 410. <br /><br />In
           the last few years, I've had the chance to work with a bunch of incredible artists and perform at venues around the Detroit area. Songs I've helped produce have been written up in the <em>Detroit Metro Times</em>, played on WDET's "Culture
