--- a/writing.html
+++ b/writing.html
@@ -5,16 +5,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-ABdnjefqVzESm+f9z9hcqx2cvwvDNjfrwfW5Le9138qHCMGlNmWawyn/tt4jR4ba" crossorigin="anonymous">
   <link rel="stylesheet" href="website_style.css">
-  <title>adam depollo | writing</title>
+  <title>Adam DePollo | Writing</title>
 </head>
 
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand navy" href="index.html">adam depollo</a>
+    <a class="navbar-brand navy" href="index.html">ADAM DePOLLO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -44,7 +42,7 @@
     <div class="m-3"></div>
     <div class="row">
       <div class="col-lg-12">
-        <h3 class="firstPageHeader">writing</h3>
+        <h1 class="firstPageHeader">WRITING</h1>
         <p class="firstPageP">
           I've been writing professionally since 2012, when I got my first gig covering concerts and writing about jazz for the Michigan Daily in Ann Arbor, MI. Since then, I've been published internationally in media ranging from newspapers, fine
           arts journals, and magazines to whitepapers, policy documents, and PR releases. Here are a few pieces that I really enjoyed putting together:
@@ -55,8 +53,8 @@
     </div>
     <div class="row">
       <div class="col-sm-2 d-flex justify-content-left">
-        <h3 class="firstPageHeader">interviews
-          <hr />
+        <h3 class="firstPageHeader">Interviews
+          <hr>
         </h3>
       </div>
       <div class="col-lg-10">
@@ -113,8 +111,8 @@
     </div>
     <div class="row">
       <div class="col-sm-2 d-flex justify-content-left">
-        <h3 class="firstPageHeader">features & reportage
-          <hr />
+        <h3 class="firstPageHeader">Features & Reportage
+          <hr>
         </h3>
       </div>
       <div class="col-lg-10">
@@ -158,8 +156,8 @@
     <!-- start fiction -->
     <div class="row">
       <div class="col-sm-2 d-flex justify-content-left">
-        <h3 class="firstPageHeader">fiction
-          <hr />
+        <h3 class="firstPageHeader">Fiction
+          <hr>
         </h3>
       </div>
       <div class="col-lg-10">
