--- a/index.html
+++ b/index.html
@@ -45,32 +45,25 @@
         <br><br><br><br>
         <div style="color: rgb(45, 50, 40); background-color: linear-gradient(to right, rgba(225, 220, 205, 1.0), rgba(225, 220, 205, 0.3)); height: 50%;">
           <div class="text-center" style="max-width: 75%;">
-          <h1 style="font-size: 40pt;">Adam DePollo</h1>
-          <h6 style="font-size: 18pt;">Software Developer | Writer | Musician</h6>
-          <!--<div class="row">
-            <div class="col-sm-2"> <a href="https://www.linkedin.com/adamdepollo" class="badge badge-primary" id="linkedin" style="border: solid .5pt; color: rgb(225, 220, 205);">LinkedIn</a></div>
-            <div class="col-sm-2"> <a href="https://github.com/adamdepollo" class="badge badge-secondary" style="border: solid .5pt; color: rgb(225, 220, 205);">GitHub</a>
-            </div>
-          </div> -->
-        </div>
+            <h1 style="font-size: 40pt;">Adam DePollo</h1>
+            <h6 style="font-size: 18pt;">Software Developer | Writer | Musician</h6>
+          </div>
         </div>
       </div>
       <div class="col-sm-2">
       </div>
       <div class="col-sm-4 card card-body" style="background-color: rgba(150, 120, 91, 0.75); border: solid 2pt; color: rgb(225, 220, 205);">
-        <p class="firstPageP" style="float: center;">After working for several years writing web and print content for corporations, newspapers, and small businesses, I learned that even small improvements in website design can make a huge difference in
+        <p class="firstPageP" style="float: center;">After working for several years writing web and print content for corporations, newspapers, and small businesses, I learned that even small improvements in website design can make a huge difference
+          in
           productivity and user experience. That realization pushed me to pursue a certificate in Java and back-end software development at Grand Circus in Detroit, MI — I wanted to combine my communication skills with the ability to design software
           to make communication easier and more effective. Now I'm working full-time as a software developer in the Metro Detroit area, and I'm always looking to pick up new freelance projects.</p>
         <p class="firstPageP">Outside of business hours, I keep busy as a freelance arts writer — currently with the Michigan Quarterly Review — and as a producer and multi-instrumentalist playing with several artists in the Detroit area. </p>
       </div>
     </div>
   </div>
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAguxHIAXzZXks7OZEjpVNEzA3mJOLz7o&callback=initMap" type="text/javascript"></script>
 
 </body>
 
