--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-ABdnjefqVzESm+f9z9hcqx2cvwvDNjfrwfW5Le9138qHCMGlNmWawyn/tt4jR4ba" crossorigin="anonymous">
   <link rel="stylesheet" href="website_style.css">
-  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" data-format="inline" data-width="600" async defer></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="script.js" async></script>
   <title>Adam DePollo | Java Developer, Writer, Musician</title>
 </head>
 
-<body id="indexBody">
+<body style="background-color: rgb(224,218,202);">
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand navy" href="index.html">ADAM DEPOLLO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,33 +40,34 @@
     </div>
   </nav>
   <div class="godown-60" id="godown"></div>
-  <div class="container">
-    <div class="m-3"></div>
-    <div class="row">
-      <div class="col-lg-6">
-        <br><br><br><br>
-        <div style="color: rgb(45, 50, 40); background-color: linear-gradient(to right, rgba(225, 220, 205, 1.0), rgba(225, 220, 205, 0.3)); height: 50%;">
-          <div class="text-center" style="max-width: 75%;">
-            <h1 style="font-size: 40pt;">Adam DePollo</h1>
-            <h6 style="font-size: 18pt;">Software Developer | Writer | Musician</h6>
-          </div>
+  <!---->
+  <img id="me" src="./me.jpg">
+  <div class="container" style="background-color: rgb(224,218,202);">
+    <div id="homeImage">
+      <br>
+      <div class="row justify-content-center fade-in">
+        <div class="col-lg-12 text-center fade-in">
+          <h1 style="font-size: 60pt;">Adam DePollo</h1>
+          <h6 style="font-size: 20pt;">Software Developer | Writer | Musician</h6>
         </div>
       </div>
-      <div class="col-sm-2">
-      </div>
-      <div class="col-sm-4 card card-body" style="background-color: rgba(150, 120, 91, 0.75); border: solid 2pt; color: rgb(225, 220, 205);">
-        <p class="firstPageP" style="float: center;">After working for several years writing web and print content for corporations, newspapers, and small businesses, I learned that even small improvements in website design can make a huge difference
-          in
-          productivity and user experience. That realization pushed me to pursue a certificate in Java and back-end software development at Grand Circus in Detroit, MI — I wanted to combine my communication skills with the ability to design software
-          to make communication easier and more effective. Now I'm working full-time as a software developer in the Metro Detroit area, and I'm always looking to pick up new freelance projects.</p>
-        <p class="firstPageP">Outside of business hours, I keep busy as a freelance arts writer — currently with the Michigan Quarterly Review — and as a producer and multi-instrumentalist playing with several artists in the Detroit area. </p>
+      <br><br>
+      <div class="row justify-content-center fade-in">
+        <div class="col-md-6 card card-body fade-in" id="homePageInfoDiv">
+          <p>After working for several years writing web and print content for corporations, newspapers, and small businesses, I learned that even small improvements in website design can make a huge
+            difference
+            in
+            productivity and user experience. That realization pushed me to pursue a certificate in Java and back-end software development at Grand Circus in Detroit, MI — I wanted to combine my communication skills with the ability to design
+            software
+            to make communication easier and more effective. Now I'm working full-time as a software developer in the Metro Detroit area, and I'm always looking to pick up new freelance projects.</p>
+          <p>Outside of business hours, I keep busy as a freelance arts writer, producer, and multi-instrumentalist playing with several artists in Metro Detroit.</p>
+        </div>
+        <div class="col-md-6">
+          <img src="./DSCF5563.jpg" id="picDiv">
+        </div>
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 </body>
 
 </html>
