--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-ABdnjefqVzESm+f9z9hcqx2cvwvDNjfrwfW5Le9138qHCMGlNmWawyn/tt4jR4ba" crossorigin="anonymous">
-  <link rel="stylesheet" href="website_style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="script.js" async></script>
+<link rel="stylesheet" href="website_style.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="script.js" async></script>
   <title>Adam DePollo | Java Developer, Writer, Musician</title>
 </head>
 
@@ -41,10 +41,10 @@
   </nav>
   <div class="godown-60" id="godown"></div>
   <!---->
-  <img id="me" src="./me.jpg">
+  <div id="homeBack"><img id="me" src="./me.jpg"></div>
   <div class="container" style="background-color: rgb(224,218,202);">
     <div id="homeImage">
-      <br>
+      <br><br>
       <div class="row justify-content-center fade-in">
         <div class="col-lg-12 text-center fade-in">
           <h1 style="font-size: 60pt;">Adam DePollo</h1>
