--- a/code.html
+++ b/code.html
@@ -100,37 +100,38 @@
         <ul class="list-unstyled">
           <li class="media">
             <div class="media-body firstPageP">
-              <h3 class="mt-0 mb-1 firstPageHeader">MINEFIELD</h3>
-              This Minesweeper port was a lot of fun to make. Working with a partner, I first made a version of the game that used a .txt file to store and display the minefield and took user input for which square to uncover using a basic Java
-              compiler console. Once we had the basic logic down, I spent the weekend researching JSwing and created the GUI you can see in the accompanying GIF. It includes a soundtrack of music I recorded at my home studio and explosion sounds for
-              when the player loses.<small><em><a href="https://github.com/philliptaylormcgrath/Minefield-App" class="d-print-none d-md-block">See the code ...</a></em></small>
-            </div>
+              <h3><a href="https://github.com/philliptaylormcgrath/Minefield-App">MINEFIELD</a></h3>
+              <p class="codeCard">Java</p>
+              <p class="codeCard">JSwing</p>
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe frameBorder="0" class="embed-responsive-item musicvid" id="gif" allowfullscreen></iframe>
+              </div>
+              </div>
           </li>
         </ul>
       </div>
-      <div class="col-lg-6">
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe frameBorder="0" class="embed-responsive-item musicvid" id="gif" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-    <div class="row">
       <div class="col-lg-6">
         <ul class="list-unstyled">
           <li class="media">
             <div class="media-body firstPageP">
-              <h3 class="mt-0 mb-1 firstPageHeader">TASKLIST</h3>
-              I made this task manager web app using SpringMVC and Hibernate. User accounts and their respective task lists are all stored in a MySQL database, which updates automatically as the user makes changes to their tasks on the web page. The
-              app includes password authentication, logic to prevent users from creating an account using an email that has already been registered, task sorting by due date and completeness, and search functionality.<small><em><a
-                    href="https://github.com/adamdepollo/Week6Capstone" class="d-print-none d-md-block">See the code ...</a></em></small>
+              <h3><a href="https://github.com/adamdepollo/Week6Capstone">TASKLIST</a></h3>
+            <p class="codeCard">Java</p>
+            <p class="codeCard">SpringMVC</p>
+            <p class="codeCard">Hibernate</p>
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe frameBorder="0" class="embed-responsive-item musicvid" id="tasklist" allowfullscreen src="tasklist.mp4"></iframe>
+            </div>
             </div>
           </li>
         </ul>
       </div>
+    </div>
+    <div class="row">
       <div class="col-lg-6">
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe frameBorder="0" class="embed-responsive-item musicvid" id="tasklist" allowfullscreen src="tasklist.mp4"></iframe>
-        </div>
+
+      </div>
+      <div class="col-lg-6">
+
       </div>
     </div>
     <div class="m-3"></div>
