added followthemoney vid to code page

--- a/code.html
+++ b/code.html
@@ -100,6 +100,23 @@
         <ul class="list-unstyled">
           <li class="media">
             <div class="media-body firstPageP">
+              <h3><a href="https://github.com/adamdepollo/FinalProjectElectionData">FOLLOWTHE$</a></h3>
+            <p class="codeCard">Java</p>
+            <p class="codeCard">RESTful Web APIs</p>
+            <p class="codeCard">SpringMVC</p>
+            <p class="codeCard">Hibernate</p>
+            <p class="codeCard">Chart.js</p>
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe frameBorder="0" class="embed-responsive-item musicvid" id="tasklist" allowfullscreen src="followthe$vid.mp4"></iframe>
+            </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="col-lg-6">
+        <ul class="list-unstyled">
+          <li class="media">
+            <div class="media-body firstPageP">
               <h3><a href="https://github.com/philliptaylormcgrath/Minefield-App">MINEFIELD</a></h3>
               <p class="codeCard">Java</p>
               <p class="codeCard">JSwing</p>
@@ -110,6 +127,9 @@
           </li>
         </ul>
       </div>
+
+    </div>
+    <div class="row">
       <div class="col-lg-6">
         <ul class="list-unstyled">
           <li class="media">
@@ -124,14 +144,6 @@
             </div>
           </li>
         </ul>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-6">
-
-      </div>
-      <div class="col-lg-6">
-
       </div>
     </div>
     <div class="m-3"></div>
