--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body style="background-color: rgb(224,218,202);">
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand navy" href="index.html">ADAM DEPOLLO</a>
+    <a class="navbar-brand navy" href="index.html">ADAM DePOLLO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
