updated contact page

--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,11 @@
 <!-- dir refers to directionality, in this case left to right-->
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-ABdnjefqVzESm+f9z9hcqx2cvwvDNjfrwfW5Le9138qHCMGlNmWawyn/tt4jR4ba" crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-ABdnjefqVzESm+f9z9hcqx2cvwvDNjfrwfW5Le9138qHCMGlNmWawyn/tt4jR4ba" crossorigin="anonymous">
   <link rel="stylesheet" href="website_style.css">
-  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" data-format="inline" data-width="600" async defer></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="script.js" async></script>
   <title>Adam DePollo | Contact</title>
 </head>
 
@@ -47,81 +47,10 @@
         <!--Section heading-->
         <h2 class="h1-responsive font-weight-bold text-center my-4 firstPageP">Get in touch ...</h2>
         <!--Section description-->
-        <p class="text-center w-responsive mx-auto mb-5 firstPageP">Say hello. Let's work together.</p>
-      </div>
-    </div>
-
-    <div class="row justify-content-center">
-
-      <!--Grid column-->
-      <div class="col-md-12 mb-md-0 mb-5">
-        <form id="contact-form" name="contact-form" action="mail.php" method="POST">
-
-          <!--Grid row-->
-          <div class="row">
-
-            <!--Grid column-->
-            <div class="col-md-6">
-              <div class="md-form mb-0">
-                <input type="text" id="name" name="name" class="form-control">
-                <label for="name" class="firstPageP">your name</label>
-              </div>
-            </div>
-            <!--Grid column-->
-
-            <!--Grid column-->
-            <div class="col-md-6">
-              <div class="md-form mb-0">
-                <input type="text" id="email" name="email" class="form-control">
-                <label for="email" class="firstPageP">your email</label>
-              </div>
-            </div>
-            <!--Grid column-->
-
-          </div>
-          <!--Grid row-->
-
-          <!--Grid row-->
-          <div class="row">
-            <div class="col-md-12">
-              <div class="md-form mb-0">
-                <input type="text" id="subject" name="subject" class="form-control">
-                <label for="subject" class="firstPageP">subject</label>
-              </div>
-            </div>
-          </div>
-          <!--Grid row-->
-
-          <!--Grid row-->
-          <div class="row">
-
-            <!--Grid column-->
-            <div class="col-md-12">
-
-              <div class="md-form">
-                <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
-                <label for="message" class="firstPageP">your message</label>
-              </div>
-
-            </div>
-          </div>
-          <!--Grid row-->
-
-        </form>
-
-        <div class="text-center text-md-center">
-          <a class="btn btn-outline-dark firstPageP" id="bottomButton" onclick="document.getElementById('contact-form').submit();">send</a>
-        </div>
-        <div class="status"></div>
+        <p class="text-center w-responsive mx-auto mb-5 firstPageP">I'm active on <a href="https://www.linkedin.com/ln/adamdepollo">LinkedIn</a>, but the fastest way to get a hold of me is via email. <br>Feel free to send me a message at <strong>adamdepollo@gmail.com</strong> with any questions or to discuss new projects or opportunities.</p>
       </div>
     </div>
   </div>
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 </body>
 
 </html>
